update (static) Webresources

--- a/Web.Resources/TestStaticWebResources/index.html
+++ b/Web.Resources/TestStaticWebResources/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <h2>Test Static Resource for Test local webservicehost without Vue Bundle Build  (StaticWebResources/index.html)</h2>
+    <h2>Test Static Resource for Test local webservicehost without Vue Bundle Build  (TestStaticWebResources/index.html)</h2>
     <p>------------</p>
     <br /><hr />
     <button class="btns" type="button" id="btn1"> Click Quit</button>
@@ -18,7 +18,7 @@
     <br /><hr />
     <button class="btns" type="button" id="btn3"> Click Load Batterystate</button>
     <br /><hr />
-    <p id="batState">batterystate: </p>
+    <p id="batState">batterystate: <span id="batstate"> x </span> </p>
     <p>------------</p>
     <script src="index.js"></script>
 
